--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ atlassian-ide-plugin.xml
 *.ctxt
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -114,5 +113,7 @@ gradle-app.setting
 # Common working directory
 run/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+#Specifics added by AlgorithmLX
+.vscode
+bin/*
+
