--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
-rootProject.name = 'VeryBadSnowman'
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven { url = 'https://maven.minecraftforge.net/' }
+    }
+}
+
+rootProject.name = 'examplemod'
