--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mc_version = 1.17.1
 
+forge_version = 41.0.62
+mc_version = 1.19
+lc_version = 1.3.2
+
+mod_version = 1.0-Alpha
